Add voice recording with real-time classification
Features:
- Real MediaRecorder API integration for actual audio recording
- Live audio visualization with frequency analysis
- AI thinking process animation showing classification steps
- Step-by-step reasoning display (7 steps)
- Automatic webm audio format handling
- Full classification with transcription and scores
- Responsive UI with purple/pink gradient theming
- New /voice route for dedicated voice recording page
- Added Voice Recording button to homepage

Components:
- ai-voice-input.tsx: Real audio recording with visualization
- voice-classifier.tsx: Full classification UI with thinking animation
- app/voice/page.tsx: Dedicated voice recording page

Integration:
- Uses browser MediaRecorder API
- Connects to /api/classify-audio endpoint
- Displays transcription, rating, reasons, and scores
- Color-coded risk levels and content scores

--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "form-data": "^4.0.4",
+    "node-fetch": "^2.7.0"
   }
 }
